--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
                                         <ul class="dropdown">
                                             <li><a href="./index.html">- Home</a></li>
                                             <li><a href="./about.html">- About</a></li>
-                                            <li><a href="./gallery.html">- Gallery</a></li>
+                                            <li><a href="#menu-start">- Gallery</a></li>
                                             <li><a href="./blog.html">- Blog</a></li>
                                             <li><a href="./single-blog.html">- Blog Details</a></li>
-                                            <li><a href="./contact.html">- Contact</a></li>
+                                            <li><a href="#contact-start">- Contact</a></li>
                                             <li><a href="#">- Dropdown</a>
                                                 <ul class="dropdown">
                                                     <li><a href="#">- Dropdown Item</a></li>
@@ -90,13 +90,13 @@
                                         </ul>
                                     </li>
                                     <li><a href="./about.html">About</a></li>
-                                    <li><a href="./gallery.html">Gallery</a></li>
+                                    <li><a href="#menu-start">Gallery</a></li>
                                     <li><a href="./blog.html">Blog</a></li>
-                                    <li><a href="./contact.html">Contact</a></li>
+                                    <li><a href="#contact-start">Contact</a></li>
                                 </ul>
 
-                                <!-- Search Icon -->
-                                <div class="search-icon" data-toggle="modal" data-target="#searchModal"><i class="ti-search"></i></div>
+                                <!-- Search Icon -/->
+                                <div class="search-icon" data-toggle="modal" data-target="#searchModal"><i class="ti-search"></i></div> -->
                             </div>
                             <!-- Nav End -->
                         </div>
@@ -109,7 +109,7 @@
 
     <!-- Welcome Area Start -->
     <section class="welcome-area">
-        <div class="welcome-slides owl-carousel">
+        <!--div class="welcome-slides owl-carousel"-->
             <!-- Single Slide -->
             <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url(img/bg-img/1.jpg);">
                 <div class="container h-100">
@@ -117,11 +117,10 @@
                         <!-- Welcome Text -->
                         <div class="col-12 col-lg-8 col-xl-6">
                             <div class="welcome-text">
-                                <h2 data-animation="bounceInDown" data-delay="900ms">Hello <br>I'm Jackson</h2>
-                                <p data-animation="bounceInDown" data-delay="500ms">I photograph very instinctively. I see how it is taken like that. I do not follow certain styles, philosophies or teachers.</p>
+                                <h2 data-animation="bounceInDown" data-delay="900ms">Pinky Pomelo Advertising<br>紅柚子廣告社</h2>
+                                <p data-animation="bounceInDown" data-delay="500ms">Better Ads, Faster Growth<br>更好的廣告，更多的生意</p>
                                 <div class="hero-btn-group" data-animation="bounceInDown" data-delay="100ms">
-                                    <a href="#" class="btn alime-btn mb-3 mb-sm-0 mr-4">Get a Quote</a>
-                                    <a class="hero-mail-contact" href="mailto:hello.alime@gmail.com">hello.alime@gmail.com</a>
+                                    <a href="mailto:pinky.pomelo21@gmail.com" class="btn alime-btn mb-3 mb-sm-0 mr-4">Email Us 馬上電郵我們</a>
                                 </div>
                             </div>
                         </div>
@@ -129,11 +128,11 @@
                 </div>
             </div>
 
-            <!-- Single Slide -->
+            <!-- Single Slide -/->
             <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url(img/bg-img/2.jpg);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
-                        <!-- Welcome Text -->
+                        <!-- Welcome Text -/->
                         <div class="col-12 col-lg-8 col-xl-6">
                             <div class="welcome-text">
                                 <h2 data-animation="bounceInUp" data-delay="100ms">Hello <br>I'm Alime</h2>
@@ -146,24 +145,24 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
     <!-- Welcome Area End -->
 
     <!-- Gallery Area Start -->
-    <div class="alime-portfolio-area section-padding-80 clearfix">
+    <div class="alime-portfolio-area section-padding-80 clearfix" id="menu-start">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
                     <!-- Projects Menu -->
-                    <div class="alime-projects-menu">
+                    <div class="alime-projects-menu" >
                         <div class="portfolio-menu text-center">
-                            <button class="btn active" data-filter="*">All</button>
-                            <button class="btn" data-filter=".human">Human</button>
-                            <button class="btn" data-filter=".nature">Nature</button>
-                            <button class="btn" data-filter=".country">Country</button>
-                            <button class="btn" data-filter=".video">Video</button>
+                            <button class="btn active" data-filter="*">All 全部</button>
+                            <button class="btn" data-filter=".logo">Logo 商標設計</button>
+                            <button class="btn" data-filter=".menu">Menu 菜單設計</button>
+                           <!-- <button class="btn" data-filter=".country">Country</button> -->
+                           <!-- <button class="btn" data-filter=".video">Video</button> -->
                         </div>
                     </div>
                 </div>
@@ -282,30 +281,32 @@
             </div>
 
             <div class="row">
-                <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
+           <!--     <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
                     <a href="#" class="btn alime-btn btn-2 mt-15">View More</a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
     <!-- Gallery Area End -->
 
+
     <!-- Follow Area Start -->
-    <section class="follow-area clearfix">
+    <section class="follow-area clearfix" id="contact-start">
         <div class="container">
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center">
-                        <h2>Follow Instagram</h2>
-                        <p>@Alime_photographer</p>
+                        <h2>Contact</h2>
+                        <p>Inquiries / Quotes / Discussion <br> pinky_pomelo21@gmail.com</p>
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- Instagram Feed Area -->
+<!--
+        <!-- Instagram Feed Area -/->
         <div class="instragram-feed-area owl-carousel">
-            <!-- Single Instagram Item -->
+            <!-- Single Instagram Item -/->
             <div class="single-instagram-item">
                 <img src="img/bg-img/11.jpg" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
@@ -315,7 +316,7 @@
                     </a>
                 </div>
             </div>
-            <!-- Single Instagram Item -->
+            <!-- Single Instagram Item -/->
             <div class="single-instagram-item">
                 <img src="img/bg-img/12.jpg" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
@@ -325,7 +326,7 @@
                     </a>
                 </div>
             </div>
-            <!-- Single Instagram Item -->
+            <!-- Single Instagram Item -/->
             <div class="single-instagram-item">
                 <img src="img/bg-img/13.jpg" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
@@ -335,7 +336,7 @@
                     </a>
                 </div>
             </div>
-            <!-- Single Instagram Item -->
+            <!-- Single Instagram Item -/->
             <div class="single-instagram-item">
                 <img src="img/bg-img/14.jpg" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
@@ -345,7 +346,7 @@
                     </a>
                 </div>
             </div>
-            <!-- Single Instagram Item -->
+            <!-- Single Instagram Item -/->
             <div class="single-instagram-item">
                 <img src="img/bg-img/15.jpg" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
@@ -355,7 +356,7 @@
                     </a>
                 </div>
             </div>
-            <!-- Single Instagram Item -->
+            <!-- Single Instagram Item -/->
             <div class="single-instagram-item">
                 <img src="img/bg-img/16.jpg" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
@@ -367,7 +368,7 @@
             </div>
         </div>
     </section>
-    <!-- Follow Area End -->
+    <!-- Follow Area End -/-> -->
 
     <!-- Footer Area Start -->
     <footer class="footer-area">
@@ -378,13 +379,13 @@
                         <!-- Copywrite Text -->
                         <div class="copywrite-text">
                             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |  <i class="fa fa-heart-o" aria-hidden="true"></i> <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                         </div>
                         <!-- Footer Logo -->
-                        <div class="footer-logo">
+                 <!--       <div class="footer-logo">
                             <a href="#"><img src="img/core-img/logo2.png" alt=""></a>
-                        </div>
+                        </div> -->
                         <!-- Social Info -->
                         <div class="social-info">
                             <a href="#"><i class="ti-facebook" aria-hidden="true"></i></a>
