--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                             <!-- Nav Start -->
                             <div class="classynav">
                                 <ul id="nav">
-                                    <li class="active"><a href="./index.html">Home</a></li>
-                                    <li><a href="#">Pages</a>
+                                    <li class="active"><a href="./index.html">Home 首頁</a></li>
+                                   <!-- <li><a href="#">Pages</a>
                                         <ul class="dropdown">
-                                            <li><a href="./index.html">- Home</a></li>
+                                            <li><a href="./index.html">- Home 首頁</a></li>
                                             <li><a href="./about.html">- About</a></li>
                                             <li><a href="#menu-start">- Gallery</a></li>
                                             <li><a href="./blog.html">- Blog</a></li>
@@ -88,11 +88,11 @@
                                                 </ul>
                                             </li>
                                         </ul>
-                                    </li>
-                                    <li><a href="./about.html">About</a></li>
-                                    <li><a href="#menu-start">Gallery</a></li>
-                                    <li><a href="./blog.html">Blog</a></li>
-                                    <li><a href="#contact-start">Contact</a></li>
+                                    </li> -->
+                                    <li><a href="#menu-start">Portfolio 作品</a></li>
+									<li><a href="#about-start">About 關於我們</a></li>
+                                    <!--<li><a href="./blog.html">Blog</a></li>-->
+                                    <li><a href="#contact-start">Contact 聯絡我們</a></li>
                                 </ul>
 
                                 <!-- Search Icon -/->
@@ -292,26 +292,15 @@
                     </div>
                 </div>
 
-                <!-- Single Gallery Item -->
+                <!-- Single Gallery Item -/->
                 <div class="col-12 col-sm-6 col-lg-6 single_gallery_item logo country mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
                         <img src="img/bg-img/36.jpg" alt="">
                         <!--div class="hover-content">
                             <a href="img/bg-img/36.jpg" class="portfolio-img">+</a>
-                        </div-->
+                        </div-/->
                     </div>
-                </div>
-
-                <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item logo mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/bg-img/37.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/37.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
+                </div-->
                 
             </div>
 
@@ -324,6 +313,25 @@
     </div>
     <!-- Gallery Area End -->
 
+    <!-- About Area Start -->
+    <section class="follow-area clearfix" id="about-start">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="section-heading text-center">
+                        <h2>About Us 關於我們</h2>
+                        <p2>We are a small yet fast-growing team based in Hong Kong.<br>We specialize in creating innovative advertising materials, such as 
+						<b>logos, posters, and social media ads</b>.
+						<br>Our mission is to be our global clients's <b>reliable and long-term partner</b> in marketing and business development. 
+						<br>
+						<br>我們是一個發展迅速的香港小團隊，專注於創意廣告設計，包括<b>公司商標、商業海報、社交媒體廣告</b>等。
+						<br>我們的願景，是成為全球客戶<b>可靠和長期的市場推廣和銷售合作伙伴</b>首選。
+						<br></p2>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
     <!-- Follow Area Start -->
     <section class="follow-area clearfix" id="contact-start">
@@ -332,7 +340,7 @@
                 <div class="col-12">
                     <div class="section-heading text-center">
                         <h2>Contact</h2>
-                        <p>Inquiries / Quotes / Discussion <br> pinky_pomelo21@gmail.com</p>
+                        <p><b>Inquiries / Quotes / Discussion <br>查詢 / 報價 / 討論</b><br> <a href="mailto:pinky_pomelo21@gmail.com">pinky_pomelo21@gmail.com</a></p>
                     </div>
                 </div>
             </div>
