--- a/index.html
+++ b/index.html
@@ -440,10 +440,10 @@
                         <p2>We are a small yet fast-growing team currently based in beautiful Charlottetown, Canada.
 						<br><br>We specialize in creating innovative advertising materials, such as: 
 						<br><br><b><ul>
-							<li>■ business logos</li>
-							<li>■ commercial posters</li>
-							<li>■ product packaging</li>
-							<li>■ social media ads</li>
+							<li>■ Business logos</li>
+							<li>■ Commercial posters</li>
+							<li>■ Product packaging</li>
+							<li>■ Social media ads</li>
 						</ul></b>
 						<br>Our mission is to be our global clients' <b>reliable and long-term partner</b> in marketing and business development. 
 						</p2>
