--- a/index.html
+++ b/index.html
@@ -430,13 +430,14 @@
     <!-- Gallery Area End -->
 
     <!-- About Area Start -->
-    <section class="follow-area clearfix" id="about-start" style="background-color:#FFF100">
+    <section class="follow-area clearfix" id="about-start" style="background-color:#ffcc00">
         <div class="container">
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading"> <br>
                         <h2 style="color:#ED2A7B"><b>About Us</b></h2>
 						<hr>
+						<img src="img\core-img\core-business.png" width=50%></img><br>
                         <p2>We are a small yet fast-growing team currently based in beautiful Charlottetown, Canada.
 						<br><br>We specialize in creating innovative advertising materials, such as: 
 						<br><br><b><ul>
