--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <nav class="classy-navbar justify-content-between" id="alimeNav">
 
                         <!-- Logo -->
-                        <a class="nav-brand" href="./index.html"><img src="./img/core-img/logo.png" alt=""></a>
+                        <a class="nav-brand" href="./index.html"><img src="./img/core-img/logo.png" alt="" width="100%"></a>
 
                         <!-- Navbar Toggler -->
                        <div class="classy-navbar-toggler">
@@ -93,7 +93,7 @@
 									<li class="active"><a href="./index.html">Home</a></li>
                                     <li><a href="#menu-start">Portfolio</a></li>
 									<li><a href="#about-start">About Us</a></li>
-									<li><a href="#menudesign-start">Menu Design Services</a></li>
+									<!--<li><a href="#menudesign-start">Menu Design Services</a></li>-->
                                     <!--<li><a href="./blog.html">Blog</a></li>-->
                                     <li><a href="#contact-start">Contact Us</a></li>
                                 </ul>
@@ -437,15 +437,97 @@
                     <div class="section-heading"> <br>
                         <h2 style="color:#ED2A7B"><b>About Us</b></h2>
 						<hr>
-						<img src="img\core-img\core-business.png" width=50%></img><br>
+						<img src="img\core-img\core-business.png" width="100%"></img><br><br>
                         <p2>We are a small yet fast-growing team currently based in beautiful Charlottetown, Canada.
-						<br><br>We specialize in creating innovative advertising materials, such as: 
-						<br><br><b><ul>
-							<li>■ Business logos</li>
-							<li>■ Commercial posters</li>
-							<li>■ Product packaging</li>
-							<li>■ Social media ads</li>
-						</ul></b>
+						<br><br>With 10+ years of international sales exposure, we aim at helping Atlanatic growers to expand their sales into Asian markets.<br><br>
+
+						<!-- <br><br>Our four core service areas include:
+							<br><br><b><ul>
+
+							<li>★ Branding & Advertisement Design</li>
+							<li>★ Translation & Localization</li>
+							<li>★ Marketing & Sales Planning</li>
+							<li>★ Export Market Intelligence</li>
+
+						</b><br>Below are some examples of our work :
+						<br><br><ul>
+
+							<li>■ Business logo design</li>
+							<li>■ Commercial poster graphic</li>
+							<li>■ Product packaging design</li>
+							<li>■ Social media & Search Engine Optimization (SEO)</li>
+
+
+							<li>■ Tradeshow advertisement materials</li>
+							<li>■ Marketing strategy development</li>
+							<li>■ Export destination market intelligence & analysis</li>
+							<li>■ Product innovation</li>
+							<li>■ etc...</li>
+						</ul> -->
+
+
+<table style="height: 15%; background-color: #ffcc00; width: 75%;">
+<tbody>
+<tr style="height: 36.5px;">
+<td style="width: 228.5px; text-align: center; height: 36.5px; background-color: #ffbb00; border-bottom: 5px solid #ffcc00; border-right: 5px solid #ffcc00">
+<p><strong>Our Core Service Areas</strong></p>
+</td>
+<td style="width: 308.5px; text-align: center; height: 36.5px; background-color: #ffbb00; border-bottom: 5px solid #ffcc00">
+<p><strong>Examples of Our Works</strong></p>
+</td>
+</tr>
+<tr style="height: 110px;">
+<td style="width: 228.5px; height: 110px; background-color: #ffbb00; border-bottom: 5px solid #ffcc00">
+<p><strong>★ Branding &amp; Advertisement Design</strong></p>
+</td>
+<td style="width: 308.5px; height: 110px; border-bottom: 5px solid #ffcc00">
+<p>&nbsp; - Business logo design</p>
+<p>&nbsp; -&nbsp;Commercial poster graphic</p>
+<p>&nbsp;&nbsp;-&nbsp;Product packaging design</p>
+<p>&nbsp;&nbsp;-&nbsp;Tradeshow advertisement materials</p>
+</td>
+</tr>
+<tr style="height: 86px;">
+<td style="width: 228.5px; height: 110px; background-color: #ffbb00; border-bottom: 5px solid #ffcc00">
+<p><strong>★ Translation &amp;&nbsp;<strong>Localization</strong></strong></p>
+</td>
+<td style="width: 308.5px; height: 110px; border-bottom: 5px solid #ffcc00">
+<p>&nbsp;&nbsp;- Multi-lingul translation</p>
+<p>&nbsp;&nbsp;- Localized promotion materials</p>
+</td>
+</tr>
+<tr style="height: 102px;">
+<td style="width: 228.5px; height: 110px; background-color: #ffbb00; border-bottom: 5px solid #ffcc00">
+<p><strong>★ Marketing &amp; Sales Planning</strong></p>
+</td>
+<td style="width: 308.5px; height: 110px;">
+<p>&nbsp;&nbsp;-&nbsp;Marketing strategy development</p>
+<p>&nbsp;&nbsp;- Social media management</p>
+<p>&nbsp;&nbsp;- Search Engine Optimization (SEO)</p>
+</td>
+</tr>
+<tr style="height: 110px;">
+<td style="width: 228.5px; height: 110px; background-color: #ffbb00; border-bottom: 5px solid #ffcc00">
+<p><strong>★ Export Market Intelligence</strong></p>
+</td>
+<td style="width: 308.5px; height: 110px; border-bottom: 5px solid #ffcc00">
+<p>&nbsp;&nbsp;- Export market intelligence &amp; analysis</p>
+<p>&nbsp;&nbsp;- Product innovation</p>
+</td>
+</tr>
+<tr style="height: 110px;">
+<td style="width: 228.5px; height: 102px; background-color: #ffbb00; border-bottom: 5px solid #ffcc00">
+<p><strong>★ Foodtrepreneur</strong></p>
+</td>
+<td style="width: 308.5px; height: 110px; border-bottom: 5px solid #ffcc00">
+<p>&nbsp;&nbsp;- Food cost analysis</p>
+<p>&nbsp;&nbsp;- Menu items design</p>
+<p>&nbsp;&nbsp;- Strategy &amp; marketing plans</p>
+<p>&nbsp;&nbsp;- etc...</p>
+</tbody>
+</table>
+
+
 						<br>Our mission is to be our global clients' <b>reliable and long-term partner</b> in marketing and business development. 
 						</p2>
                     </div>
@@ -454,7 +536,8 @@
         </div>
 
 	 <!-- Menu Design Area Start -->
-    <section class="follow-area clearfix" id="menudesign-start">
+   
+	<!--<section class="follow-area clearfix" id="menudesign-start">
         <div class="container" >
             <div class="row">
                 <div class="col-12">
@@ -474,7 +557,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
 
     <!-- Follow Area Start -->
