update to size of core busines table

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
 <table style="height: 15%; background-color: #ffcc00; width: 90%;">
 <tbody>
 <tr style="height: 36.5px;">
-<td style="width: 228.5px; text-align: center; height: 36.5px; background-color: #ffbb00; border-bottom: 5px solid #ffcc00; border-right: 5px solid #ffcc00">
+<td style="width: 150px; text-align: center; height: 36.5px; background-color: #ffbb00; border-bottom: 5px solid #ffcc00; border-right: 5px solid #ffcc00">
 <p><strong>Our Core Service Areas</strong></p>
 </td>
 <td style="width: 308.5px; text-align: center; height: 36.5px; background-color: #ffbb00; border-bottom: 5px solid #ffcc00">
@@ -477,53 +477,53 @@
 </td>
 </tr>
 <tr style="height: 110px;">
-<td style="width: 228.5px; height: 110px; background-color: #ffbb00; border-bottom: 5px solid #ffcc00">
+<td style="width: 150px; height: 110px; background-color: #ffbb00; border-bottom: 5px solid #ffcc00">
 <p><strong>★ Branding &amp; Advertisement Design</strong></p>
 </td>
 <td style="width: 308.5px; height: 110px; border-bottom: 5px solid #ffcc00">
-<p>&nbsp; - Business logo design</p>
-<p>&nbsp; -&nbsp;Commercial poster graphic</p>
-<p>&nbsp;&nbsp;-&nbsp;Product packaging design</p>
-<p>&nbsp;&nbsp;-&nbsp;Tradeshow advertisement materials</p>
+<p style="font-weight: bold">&nbsp; - Business logo design</p>
+<p style="font-weight: bold">&nbsp; -&nbsp;Commercial poster graphic</p>
+<p style="font-weight: bold">&nbsp;&nbsp;-&nbsp;Product packaging design</p>
+<p style="font-weight: bold">&nbsp;&nbsp;-&nbsp;Tradeshow advertisement materials</p>
 </td>
 </tr>
 <tr style="height: 86px;">
-<td style="width: 228.5px; height: 110px; background-color: #ffbb00; border-bottom: 5px solid #ffcc00">
+<td style="width: 150px; height: 110px; background-color: #ffbb00; border-bottom: 5px solid #ffcc00">
 <p><strong>★ Translation &amp;&nbsp;<strong>Localization</strong></strong></p>
 </td>
 <td style="width: 308.5px; height: 110px; border-bottom: 5px solid #ffcc00">
-<p>&nbsp;&nbsp;- Multi-lingul translation</p>
-<p>&nbsp;&nbsp;- Localized promotion materials</p>
+<p style="font-weight: bold">&nbsp;&nbsp;- Multi-lingul translation</p>
+<p style="font-weight: bold">&nbsp;&nbsp;- Localized promotion materials</p>
 </td>
 </tr>
 <tr style="height: 102px;">
-<td style="width: 228.5px; height: 110px; background-color: #ffbb00; border-bottom: 5px solid #ffcc00">
+<td style="width: 150px; height: 110px; background-color: #ffbb00; border-bottom: 5px solid #ffcc00">
 <p><strong>★ Marketing &amp; Sales Planning</strong></p>
 </td>
 <td style="width: 308.5px; height: 110px;">
-<p>&nbsp;&nbsp;-&nbsp;Marketing strategy development</p>
-<p>&nbsp;&nbsp;- Social media management</p>
-<p>&nbsp;&nbsp;- Search Engine Optimization (SEO)</p>
+<p style="font-weight: bold">&nbsp;&nbsp;-&nbsp;Marketing strategy development</p>
+<p style="font-weight: bold">&nbsp;&nbsp;- Social media management</p>
+<p style="font-weight: bold">&nbsp;&nbsp;- Search Engine Optimization (SEO)</p>
 </td>
 </tr>
 <tr style="height: 110px;">
-<td style="width: 228.5px; height: 110px; background-color: #ffbb00; border-bottom: 5px solid #ffcc00">
+<td style="width: 150px; height: 110px; background-color: #ffbb00; border-bottom: 5px solid #ffcc00">
 <p><strong>★ Export Market Intelligence</strong></p>
 </td>
 <td style="width: 308.5px; height: 110px; border-bottom: 5px solid #ffcc00">
-<p>&nbsp;&nbsp;- Export market intelligence &amp; analysis</p>
-<p>&nbsp;&nbsp;- Product innovation</p>
+<p style="font-weight: bold">&nbsp;&nbsp;- Export market intelligence &amp; analysis</p>
+<p style="font-weight: bold">&nbsp;&nbsp;- Product innovation</p>
 </td>
 </tr>
 <tr style="height: 110px;">
-<td style="width: 228.5px; height: 102px; background-color: #ffbb00; border-bottom: 5px solid #ffcc00">
+<td style="width: 150px; height: 102px; background-color: #ffbb00; border-bottom: 5px solid #ffcc00">
 <p><strong>★ Foodtrepreneur</strong></p>
 </td>
 <td style="width: 308.5px; height: 110px; border-bottom: 5px solid #ffcc00">
-<p>&nbsp;&nbsp;- Food cost analysis</p>
-<p>&nbsp;&nbsp;- Menu items design</p>
-<p>&nbsp;&nbsp;- Strategy &amp; marketing plans</p>
-<p>&nbsp;&nbsp;- etc...</p>
+<p style="font-weight: bold">&nbsp;&nbsp;- Food cost analysis</p>
+<p style="font-weight: bold">&nbsp;&nbsp;- Menu items design</p>
+<p style="font-weight: bold">&nbsp;&nbsp;- Strategy &amp; marketing plans</p>
+<p style="font-weight: bold">&nbsp;&nbsp;- etc...</p>
 </tbody>
 </table>
 
