--- a/index.html
+++ b/index.html
@@ -198,6 +198,16 @@
 				<!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item menu mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
+                        <img src="img/bg-img/tradshow.jpg" alt="">
+                        <!--div class="hover-content">
+                            <a href="img/bg-img/2.jpg" class="portfolio-img">+</a>
+                        </div-->
+                    </div>
+                </div>
+
+				<!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item menu mb-30 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="single-portfolio-content">
                         <img src="img/bg-img/menu design.jpg" alt="">
                         <!--div class="hover-content">
                             <a href="img/bg-img/2.jpg" class="portfolio-img">+</a>
